# shengxiu_feedbot

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.example.yaml  pyproject.toml
deploy/: cleanup.py  feed-bot-deploy.sh  feed-bot-deploy.sudoers  feed-bot-webhook-hooks.json.example  feed-bot-webhook.nginx.conf.example  feed-bot-webhook.service  nginx.conf.example  pixiv-feed-bot-cleanup.service  pixiv-feed-bot-cleanup.timer  pixiv-feed-bot.service
docs/: DEPLOY.md
pixivfeed/: __init__.py  __main__.py  config.py  utils.py  wikipedia.py
pixivfeed/channel/telegram/: __init__.py  auth.py  bot.py  constants.py  handlers.py  inline.py  jobqueue.py  progress.py  setting.py  wiki.py
pixivfeed/provider/: __init__.py  _common.py  _size_prefetch.py
pixivfeed/provider/ehentai/: __init__.py  _archive.py  _modes.py  _search.py  _tagdb.py
pixivfeed/provider/jm/: __init__.py
pixivfeed/provider/nhentai/: __init__.py
pixivfeed/provider/pixiv/: __init__.py  api.py  cli.py  downloader.py  model.py  novel_publisher.py  parser.py  url.py
pixivfeed/publisher/: __init__.py  _resolver.py  telegraph.py
pixivfeed/storage/: __init__.py  cache.py  cache_keymap.py  db.py  r2.py  usage.py
