[project]
name = "pixiv-feed-bot"
version = "0.6.0"
description = "Telegram bot that turns Pixiv links into Telegra.ph pages or inline images."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "凤笙休" }]

dependencies = [
    "python-telegram-bot[all]>=21.0",
    "httpx[http2]>=0.27",
    "telegraph[aio]>=2.2",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "aiosqlite>=0.20",
    "loguru>=0.7",
    "PyYAML>=6.0",
    "orjson>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pixivfeed"]
